--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/nirbhaypatil/accessibility-tests/issues"
   },
-  "homepage": "https://github.com/nirbhaypatil/accessibility-tests#readme"
+  "homepage": "https://github.com/nirbhaypatil/accessibility-tests#readme",
+  "dependencies": {
+    "help": "^3.0.2",
+    "pa11y": "^6.2.3"
+  }
 }
