--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/nirbhaypatil/accessibility-tests#readme",
   "dependencies": {
     "help": "^3.0.2",
-    "pa11y": "^6.2.3"
+    "pa11y": "^6.2.3",
+    "pa11y-ci": "^3.0.1",
+    "pa11y-ci-reporter-html": "^5.0.1"
   }
 }
